<resources>
    <string name="app_name">UDefine</string>

    <!--toolbar menu item-->
    <string name="action_delete_note">Delete</string>
    <string name="action_layout_selection">Layouts</string>

    <!--button string-->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="default_button">Default</string>
    <string name="delete_button">Delete</string>
    <string name="preview_button">Preview</string>

    <!--activity title-->
    <string name="title_activity_layout_selection">LayoutSelection</string>
    <string name="title_activity_new_note">New Note</string>
    <string name="title_activity_new_layout">NewLayout</string>
    <string name="title_activity_layout_element">LayoutElement</string>
    <string name="title_activity_edit_layout">EditLayout</string>

    <!--textview string-->
    <string name="title_element_title">Element Title Name</string>
    <string name="element_title_hint">title name</string>
    <string name="widget_type_selection">Select Wedgit</string>
    <string name="title_element_preview">Element Preview</string>

    <!--spinner element-->
    <string-array name="widget_type_spinner">
        <item>EditText</item>
        <item>Date/Time Picker</item>
        <item>Tag</item>
        <item>PlainText</item>
    </string-array>

    <string-array name="tag_color_spinner">
        <item>Select Tag</item>
        <item>#00ff00</item>
        <item>#ffff00</item>
        <item>#ff751a</item>
        <item>#ff0000</item>
        <item>#993399</item>
        <item>#6666ff</item>
    </string-array>

    <string name="title_title">Title</string>
    <string name="time_title">Time</string>
    <string name="date_button">Date</string>
    <string name="time_button">Time</string>
    <string name="tag_title">Tag</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="new_layout_name_title">Layout Name</string>
</resources>
